--- a/src/components/neuralNetwork/NNStyles.css
+++ b/src/components/neuralNetwork/NNStyles.css
@@ -296,32 +296,32 @@
   gap: 20px;
 }
 
-.result-image {
-  background-color: var(--card-bg);
-  border-radius: 8px;
-  padding: 15px;
-  cursor: pointer;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease;
-  border: 1px solid var(--border-color);
-}
+/* .result-image { */
+/*   background-color: var(--card-bg); */
+/*   border-radius: 8px; */
+/*   padding: 15px; */
+/*   cursor: pointer; */
+/*   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
+/*   transition: transform 0.2s ease; */
+/*   border: 1px solid var(--border-color); */
+/* } */
 
 .result-image:hover {
   transform: scale(1.02);
 }
 
-.result-image h4 {
-  margin: 0 0 10px;
-  color: var(--primary-color);
-  text-transform: capitalize;
-  text-align: center;
-}
+/* .result-image h4 { */
+/*   margin: 0 0 10px; */
+/*   color: var(--text-color); */
+/*   text-transform: capitalize; */
+/*   text-align: center; */
+/* } */
 
-.result-image img {
-  width: 100%;
-  height: auto;
-  border-radius: 4px;
-}
+/* .result-image img { */
+/*   width: 100%; */
+/*   height: auto; */
+/*   border-radius: 4px; */
+/* } */
 
 /* Modal */
 .modal {
